--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "dream-broker-assignment",
   "version": "0.0.0",
   "private": true,
-  
-  "nodemonConfig": { 
+  "nodemonConfig": {
     "exec": "npm run dev",
-    "watch": ["server/*", "public/*"],
-    "ignore": ["**/__tests__/**", "*.test.js", "*.spec.js"]
+    "watch": [
+      "server/*",
+      "public/*"
+    ],
+    "ignore": [
+      "**/__tests__/**",
+      "*.test.js",
+      "*.spec.js"
+    ]
   },
   "scripts": {
     "start": "npm run prod",
@@ -31,6 +37,11 @@
     "rimraf": "^3.0.2"
   },
   "babel": {
-    "presets": ["@babel/preset-env"]
+    "presets": [
+      "@babel/preset-env"
+    ]
+  },
+  "devDependencies": {
+    "jest": "^26.4.2"
   }
 }
