--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "prod": "NODE_ENV=production npm-run-all build server",
     "transpile": "babel ./server --out-dir dist-server",
     "clean": "rimraf dist-server",
-    "watch:dev": "nodemon"
+    "watch:dev": "nodemon",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/cli": "^7.11.6",
@@ -43,5 +44,8 @@
   },
   "devDependencies": {
     "jest": "^26.4.2"
+  },
+  "jest": { 
+    "testEnvironment": "node"
   }
 }
