--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "transpile": "babel ./server --out-dir dist-server",
     "clean": "rimraf dist-server",
     "watch:dev": "nodemon",
-    "test": "jest"
+    "test": "jest --verbose ./server"
   },
   "dependencies": {
     "@babel/cli": "^7.11.6",
@@ -45,7 +45,7 @@
   "devDependencies": {
     "jest": "^26.4.2"
   },
-  "jest": { 
+  "jest": {
     "testEnvironment": "node"
   }
 }
