--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     ]
   },
   "devDependencies": {
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "supertest": "^4.0.2"
   },
   "jest": {
     "testEnvironment": "node"
