--- a/package.json
+++ b/package.json
@@ -30,16 +30,25 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "cookie-parser": "~1.4.4",
+    "core-js": "^3.6.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
+    "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2"
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      [
+        "@babel/preset-env",
+        {
+          "useBuiltIns": "usage",
+          "corejs": 3,
+          "targets": "> 0.25%, not dead"
+        }
+      ]
     ]
   },
   "devDependencies": {
