--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
     "regenerator-runtime": "^0.13.7",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "winston": "^3.3.3"
   },
   "babel": {
     "presets": [
