--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # API keys and secrets
 .env
 
+debug.log
+
 # Dependency directory
 node_modules
-dist-server
+dist-server/**/*
 # OS metadata
 .DS_Store
