--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -1,17 +1,35 @@
 name: CI
 
-on: [push, pull_request]
+on:
+    push:
+        branches:
+            - master
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+
+    strategy:
+        matrix:
+            node-version: [10.x,9.x]
     
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/node@v1
+        with:
+            node-version: ${{ matrix.node-version }}
+
+    
+    - name: npm install
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        npm install
+    - name: npm test
+      run: |
+       npm test
+      env:
+        CI: true
+    - name: npm build
+        run: |
+          npm run build --if-present
