--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -1,22 +1,31 @@
-name: Node CI
+name: DB Programming Assignment CI
 
-on: [push, pull_request]
+on:
+    push:
+        branches: [master]
+    pull_request:
+        branches: [master]
 
 jobs:
-  build-node:
+  build:
+    name: Build
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js 12.x
+      - name: Setup Nodejs environment
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
       - name: Get npm cache directory
         id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v1
+        run: echo "::set-output name=dir::$(npm config get cache)"
+
+
+      - name: Setup cache
+        uses: actions/cache@v1
         with:
           path: ${{ steps.npm-cache.outputs.dir }}
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
