--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -39,6 +39,6 @@ jobs:
         run: npm run test
 
       - name: Build 
-        run: npm run build --if-present
+        run: npm run build
         env:
           CI: true
