--- a/.github/workflows/continous-integration.yml
+++ b/.github/workflows/continous-integration.yml
@@ -42,3 +42,11 @@ jobs:
         run: npm run build
         env:
           CI: true
+      
+      - name: Deploy to heroku
+        uses: actions/checkout@v2
+        uses: akhileshns/heroku-deploy@v3.0.0
+        with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: "secret-plateau-40276"
+            heroku_email: "steve.pdp@gmail.com"
